# nimbus

./: .gitignore  plot_wind_evolution.py  pyproject.toml  readme.md
assets/: attributions.txt  circle.glb  sphere.glb  vampire.glb
nimbus/: __init__.py
nimbus/core/: config.py  interface.py  logic.py  physics.py  primitives.py  quaternion.py  scenario.py  simulation.py  spatial.py  state.py  terrain.py  wind.py
nimbus/environments/ursina/: config.py  entities.py  runtime.py  utils.py
nimbus/visual/: __init__.py  entities.py  gamepad.py  runtime.py  utils.py
notebooks/: nimbus-demo.ipynb  nimbus-theory.ipynb
tests/: __init__.py  conftest.py
tests/core/: test_interface.py  test_logic.py  test_physics.py  test_primitives.py  test_quaternion.py  test_scenario.py  test_simulation.py  test_spatial.py  test_terrain.py
