[project]
name = "nimbus"
version = "0.1.0"
description = "A massively parallelisable JAX flight simulator."
authors = [
    {name = "Alex Goddard"},
]
dependencies = [
    "jax==0.7.1",
    "jaxtyping==0.3.2",
]
requires-python = ">=3.10"
readme = "readme.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true